# Self-education_platform

./: .coverage  .env  .env.sample  Readme.md  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_section_is_public.py  0003_alter_section_is_public.py  0004_alter_material_owner_alter_material_section.py
exams/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
exams/migrations/: 0001_initial.py  0002_exam_is_public.py
users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
